@@ -112,7 +112,7 @@ Hdf5ConfigIter::next()
 
       PSTime::Time etime = Hdf5Utils::getTime(m_runIter->group(), "start");
       boost::shared_ptr<PSEvt::EventId> eid;
-      if (etime != PSTime::Time(0,0)) eid = boost::make_shared<Hdf5EventId>(m_runNumber, etime, 0x1ffff, 0, 0);
+      if (etime != PSTime::Time(0,0)) eid = boost::make_shared<Hdf5EventId>(m_runNumber, etime, 0x1ffff, 0, 0,0);
       res = Hdf5IterData(Hdf5IterData::BeginRun, eid);
 
     }
@@ -127,7 +127,7 @@ Hdf5ConfigIter::next()
   
       PSTime::Time etime = Hdf5Utils::getTime(m_runIter->group(), "end");
       boost::shared_ptr<PSEvt::EventId> eid;
-      if (etime != PSTime::Time(0,0)) eid = boost::make_shared<Hdf5EventId>(m_runNumber, etime, 0x1ffff, 0, 0);
+      if (etime != PSTime::Time(0,0)) eid = boost::make_shared<Hdf5EventId>(m_runNumber, etime, 0x1ffff, 0, 0,0);
       res = Hdf5IterData(Hdf5IterData::EndRun, eid);
 
       m_runIter.reset();
