@@ -113,7 +113,7 @@ Hdf5RunIter::next()
       // make event id
       PSTime::Time etime = Hdf5Utils::getTime(m_ccIter->group(), "start");
       boost::shared_ptr<PSEvt::EventId> eid;
-      if (etime != PSTime::Time(0,0)) eid = boost::make_shared<Hdf5EventId>(m_runNumber, etime, 0x1ffff, 0, 0);
+      if (etime != PSTime::Time(0,0)) eid = boost::make_shared<Hdf5EventId>(m_runNumber, etime, 0x1ffff, 0, 0,0);
       res = Hdf5IterData(Hdf5IterData::BeginCalibCycle, eid);
 
       // fill result with the configuration object data locations
@@ -141,7 +141,7 @@ Hdf5RunIter::next()
 
       PSTime::Time etime = Hdf5Utils::getTime(m_ccIter->group(), "end");
       boost::shared_ptr<PSEvt::EventId> eid;
-      if (etime != PSTime::Time(0,0)) eid = boost::make_shared<Hdf5EventId>(m_runNumber, etime, 0x1ffff, 0, 0);
+      if (etime != PSTime::Time(0,0)) eid = boost::make_shared<Hdf5EventId>(m_runNumber, etime, 0x1ffff, 0, 0,0);
       res = Hdf5IterData(Hdf5IterData::EndCalibCycle, eid);
 
       m_ccIter.reset();
